<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="no_internet_connection">No internet connection</string>
    <string name="network_failure">Network Failure</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="app_name">Dart Charge</string>
    <string name="txt_dart_charge">DART CHARGE</string>
    <string name="txt_gov_uk">GOV.UK</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_user_name">Username : </string>
    <string name="txt_enter_password">Enter password</string>
    <string name="txt_forgot_password"><b><u>Forgot password</u></b></string>
    <string name="txt_create_new_account">Do not have account? <b><u>Create account</u></b></string>
    <string name="txt_error_username">Username can not be empty</string>
    <string name="txt_error_username_password">Please enter email and password</string>
    <string name="txt_error_account_zip">Please enter account number and zip code</string>
    <string name="txt_error_password">Password can not be empty</string>
    <string name="txt_pre_pay_scheme">Pre pay scheme</string>
    <string name="txt_pre_pay_account">Pre Pay Account</string>
    <string name="txt_available_balance">AVAILABLE BALANCE</string>
    <string name="txt_manual_topup">Manual Top-Up</string>
    <string name="txt_vehicles">VEHICLES</string>
    <string name="txt_view_vehicle_list"><u>View Vehicle List</u></string>
    <string name="txt_monthly_usage">MONTHLY USAGE</string>
    <string name="txt_view_crossing_history"><u>View crossing history</u></string>
    <string name="txt_paymnt">PAYMENT</string>
    <string name="txt_euro">"\u20ac"</string>
    <string name="txt_pound">"£"</string>
    <string name="txt_view_payment_history"><u>View payment history</u></string>
    <string name="account_number">Account number</string>
    <string name="account_status">Account status</string>
    <string name="account_type">Account type:</string>
    <string name="account_type_for_summary">Account type</string>
    <string name="top_up_method">Top up Type:</string>
    <string name="txt_dashboard">Dashboard</string>
    <string name="txt_vehicle_class"><b>Class</b> : %1$s</string>
    <string name="txt_vehicle_model"><b>Model</b> : %1$s</string>
    <string name="txt_vehicle_date_added"><b>Date Added</b> : %1$s</string>
    <string name="txt_search">Search</string>
    <string name="txt_payments">PAYMENTS</string>
    <string name="txt_date">DATE</string>
    <string name="txt_transaction_id">Transaction ID</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_add_vehicle">Add Vehicle</string>
    <string name="txt_forgot_your_email"><u>Forgot your email?</u></string>
    <string name="txt_forgot_your_password"><u>Forgot your password?</u></string>
    <string name="forgot_password">Reset Password</string>
    <string name="txt_forgot_username_heading">Forgot username</string>
    <string name="txt_enter_your_details">Enter your details</string>
    <string name="txt_account_number">Account number</string>
    <string name="txt_error_account_number">Please enter account number</string>
    <string name="txt_error_zip_code">Please enter postal code</string>
    <string name="txt_building_number_and_street"><b>Building Number and Street</b></string>
    <string name="txt_next">Next</string>
    <string name="txt_login">Log in</string>
    <string name="txt_your_username"><b>Your username</b></string>
    <string name="txt_your_email_address">Your email address</string>
    <string name="txt_find_username_string">Please find your registered email address based on your account number and postcode</string>
    <string name="txt_username_string">UserName : %1$s</string>
    <string name="str_enter_email_id">Enter email ID</string>
    <string name="str_usr_name">Username</string>
    <string name="str_usr_passwd">Enter password</string>
    <string name="str_forgot_password">Forgot password?</string>
    <string name="str_back">Back</string>
    <string name="str_enter_ur_details">Enter your details</string>
    <string name="str_account_number">Account number</string>
    <string name="str_post_cde">Post code</string>
    <string name="str_next">Next</string>
    <string name="str_choose_method_to_get_ur_link">A code will be sent to your mobile or email address.</string>
    <string name="str_choose_method_to_get_email_code">A code will be sent to your email address.</string>
    <string name="str_continue">Continue</string>
    <string name="str_check_your_mail">Check your email for a security code</string>
    <string name="str_resend_security_code">resend security code</string>
    <string name="str_not_rcvd_security_code_in_mail">If you haven\'t received the security code, please re-check your email address and click </string>
    <string name="str_not_rcvd_security_code_in_message">If you haven\'t received the security code, please re-check your message and click </string>
    <string name="str_check_text_message">Check your text message for a security code.</string>
    <string name="str_check_post">Check your post</string>
    <string name="str_letter_posted_txt">"A letter will be posted to your registered address with a temporary password. The password will be active for seven days. Please use the password to login to your account "</string>
    <string name="str_letter_not_received">If you do not receive the letter within 5 days, please contact :</string>
    <string name="str_dart_change_contact">Dart Change contact centre</string>
    <string name="str_contact_address">Telephone: 0300 300 0120\nTextPhone: 18001 0300 300 0120\nEveryday, 8am to 8pm</string>
    <string name="str_content_description_contact_address">Telephone: 0 3 0 0 3 0 0 0 1 2 0\nTextPhone: 1 8 0 0 1 0 3 0 0 3 0 0 0 1 2 0\nEveryday, 8am to 8pm</string>
    <string name="str_accept">Accept</string>
    <string name="txt_email_address">Email address</string>
    <string name="txt_enter_security_code">Enter security code</string>
    <string name="txt_verify_security_code">Verify security code</string>
    <string name="txt_create_your_pwd">Create your password</string>
    <string name="txt_create_pwd">Create password</string>
    <string name="txt_pwd_constraints_placeholder">Password constraints placeholder</string>
    <string name="txt_confirm_pwd">Confirm password</string>
    <string name="txt_please_login_to_continue">Please log in to continue</string>
    <string name="txt_enter_pwd">Enter password</string>
    <string name="str_enter_confirm_pwd">Enter confirm password</string>
    <string name="str_submit">Submit</string>
    <string name="err_pwd_empty">Please enter password</string>
    <string name="err_c_pwd_empty">Please enter confirm password</string>
    <string name="err_pwd_and_c_pwd_not_same">Password and confirm password are not same</string>
    <string name="txt_make_one_off_payment">Make a one off payment</string>
    <string name="txt_whr_do_you_want_rcpt_to_send">Where do you want your receipt to be sent?</string>
    <string name="str_resend">Resend</string>
    <string name="str_check_inbox">"Please check your inbox, spam, bulk or junk email folder it may have been mistakenly blocked by your email system "</string>
    <string name="str_not_received_resend">If you have not received the email please click resend</string>
    <string name="str_resend_message">Please check your text message, if you have not received the text message, please click resend</string>
    <string name="str_make_one_of_payment">Pay for crossings without an account</string>
    <string name="one_of_payment">Pay For Crossings</string>
    <string name="str_one_of_payment_">One off payment</string>
    <string name="str_make_one_of_payment_continue">Make a one off payment \nMake a payment for crossings without creating an account</string>
    <string name="str_charges_for_crossing">The charges for crossings</string>
    <string name="str_six_am_morning_txt">\u2022  You have made since 6 am yesterday morning</string>
    <string name="str_twelve_months_txt">\u2022  You are planning to make for next 12 months are valid for same time period</string>
    <string name="str_single_vehicle">Single Vehicle</string>
    <string name="str_multiple_vehicle">Multiple Vehicles</string>
    <string name="str_login">Log In</string>
    <string name="str_continue_login">Continue to sign In</string>
    <string name="str_pay_dart_ford_crossing">Pay the Dartford Charge (Dart Charge)</string>
    <string name="str_what_would_you_like_to_do">What would you like to do?</string>
    <string name="str_create_account">Set up a Dart Charge account</string>
    <string name="str_resolve_penalty_charge">Setup a Dart charge account</string>
    <string name="str_about_this_service">About This Service</string>
    <string name="str_crossing_service_update">Crossing service updates</string>
    <string name="str_contact_dart_charge">Contact Dart Charge</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="postcode"><b>Postcode</b></string>
    <string name="find_address">Find address</string>
    <string name="next">Next</string>
    <string name="postCodeHint">ex. WA4 1AB</string>
    <string name="what_is_your_address">What is your registered office address?</string>
    <string name="this_should_be_the_address_were_the_vehicle_is_registered">This should be the address were the vehicle is registered.</string>
    <string name="enter_address_manually">Enter address manually</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="primary_account_holder_first_name">Primary account holder’s first name</string>
    <string name="primary_account_holder_last_name">Primary account holder’s last name</string>
    <string name="str_address_line2"><b>Address line 2 (optional)</b></string>
    <string name="str_town_city"><b>Town or City</b></string>
    <string name="str_address_example">For example 46, Flat 2a or Rose Cottage</string>
    <string name="str_what_your_top_up_low_balance">What are your top-up and low balance amounts?</string>
    <string name="str_low_balance_threshold">Your low balance threshold</string>
    <string name="str_if_your_balance_falls_below">If your balance falls below this amount, we’ll top it up</string>
    <string name="str_low_balance">Low balance threshold</string>
    <string name="str_minimum_amount">Minimum amount £%s</string>
    <string name="str_top_up_amount">Your top-up amount</string>
    <string name="str_you_will_automatically_top_up">We\'ll automatically top-up your account with this amount</string>
    <string name="top_up_amount">Top-up amount</string>
    <string name="str_how_do_you_want_to_pay">How do you want to pay?</string>
    <string name="str_payment_amount">Payment amount</string>
    <string name="str_name_on_card">Name on card</string>
    <string name="str_card_number">Card Number</string>
    <string name="str_accept_card_types">Accepted credit and debit card types</string>
    <string name="card_security_code">Card Security Code</string>
    <string name="last_three_digit">Last 3 or 4 digits on back of card</string>
    <string name="proceed_with_payment">PROCEED WITH PAYMENT</string>
    <string name="pay_sample">PAYG SAMPLE PAGE</string>
    <string name="str_you_choose_to_pay">You chose to pay as you go. We’ll collect payment from your card each time you cross.</string>
    <string name="str_your_payment_has_been_declined">Your payment has been declined.</string>
    <string name="str_contact_your_bank_for_more_details">Contact your bank for more details. No money has been taken from your account.</string>
    <string name="str_try_payment_again">Try payment again</string>
    <string name="country_code">Country Code</string>
</resources>