<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="18dp"
            android:paddingEnd="20dp"
            android:paddingBottom="18dp"
            tools:context=".ui.account.creation.newAccountCreation.PaymentFragment">

            <TextView
                style="@style/MediumTextBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_how_do_you_want_to_pay" />

            <TextView
                android:id="@+id/youChooseToPay"
                style="@style/RegularTextBlack"
                android:layout_marginTop="3dp"
                android:text="@string/str_you_choose_to_pay" />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/paymentAmount"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:imeOptions="actionNext"
                app:inputType="numberDecimal"
                app:labelText="@string/str_payment_amount"
                app:maxLength="50"

                />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/nameOnCard"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:imeOptions="actionNext"
                app:inputType="text"
                app:labelText="@string/str_name_on_card"
                app:maxLength="50"

                />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/cardNumber"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:imeOptions="actionNext"
                app:inputType="number"
                app:labelText="@string/str_card_number"
                app:maxLength="19"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/str_accept_card_types"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/allcardsaccepted" />


            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/expiryDate"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:imeOptions="actionNext"
                app:inputType="number"
                app:labelText="@string/expiry_date"
                app:maxLength="5"

                />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/cardSecurityCode"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:imeOptions="actionNext"
                app:inputType="number"
                app:labelText="@string/card_security_code"
                app:maxLength="4"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/last_three_digit"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.conduent.apollo.ui.CMButton
                android:id="@+id/proceddWithPayment"
                style="@style/PrimaryButton"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:text="@string/proceed_with_payment" />

            <com.conduent.apollo.ui.CMButton
                style="@style/PrimaryButton"
                android:background="#E0E0E0"
                android:backgroundTint="#E0E0E0"
                android:text="@string/pay_sample"
                android:textColor="#AC352F"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</layout>