<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_17sdp"
        android:paddingEnd="@dimen/_20sdp"
        tools:background="@drawable/he_bg">

        <TextView
            android:id="@+id/txtSignUp"
            style="@style/MediumText"
            android:layout_width="0dp"
            android:text="@string/what_is_your_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.conduent.nationalhighways.utils.widgets.NHTextInput
            android:id="@+id/inputFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:headingText="@string/first_name"
            app:hintText="@string/primary_account_holder_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />

        <com.conduent.nationalhighways.utils.widgets.NHTextInput
            android:layout_width="0dp"
            android:id="@+id/inputLastName"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:headingText="@string/last_name"
            app:hintText="@string/primary_account_holder_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputFirstName" />

        <Button
            android:id="@+id/btnNext"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:backgroundTint="@color/buttonColorPrimary"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>