<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="18dp"
            android:paddingEnd="20dp"
            android:paddingBottom="18dp"
            tools:context=".ui.account.creation.newAccountCreation.TopUpFragment">

            <TextView
                style="@style/MediumTextBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_what_your_top_up_low_balance"

                />

            <TextView
                style="@style/MediumTextBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/str_low_balance_threshold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/str_if_your_balance_falls_below"
                android:textColor="@color/black"
                android:textSize="14sp"

                />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/lowBalance"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:imeOptions="actionNext"
                app:inputType="numberDecimal"
                app:labelText="@string/str_low_balance"
                app:maxLength="50"


                />

            <TextView
                android:id="@+id/minimumAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/str_minimum_amount"
                android:textColor="@color/label_color"
                android:textSize="14sp" />

            <TextView
                style="@style/MediumTextBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/str_top_up_amount"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/str_you_will_automatically_top_up"
                android:textColor="@color/black"
                android:textSize="14sp"

                />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/top"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:imeOptions="actionGo"
                app:inputType="numberDecimal"
                app:labelText="@string/top_up_amount"
                app:maxLength="50" />

            <TextView
                android:id="@+id/minimumAMountTopUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/str_minimum_amount"
                android:textColor="@color/label_color"
                android:textSize="14sp" />

            <com.conduent.apollo.ui.CMButton
                android:id="@+id/topUpBtn"
                style="@style/PrimaryButton"
                android:layout_marginTop="30dp"
                android:enabled="false"
                android:text="@string/str_continue" />


        </LinearLayout>
    </ScrollView>

</layout>