<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_start_now.xml"
    app:startDestination="@id/aboutService">
    <fragment
        android:id="@+id/aboutService"
        android:name="com.heandroid.ui.startNow.AboutServiceFragment"
        android:label="@string/str_about_this_service"
        tools:layout="@layout/fragment_about_service">

    </fragment>

    <fragment
        android:id="@+id/contactDartCharge"
        android:name="com.heandroid.ui.startNow.ContactDartChargeFragment"
        android:label="@string/str_contact_dart_charge"
        tools:layout="@layout/fragment_contact_dart_charge">

    </fragment>

    <fragment
        android:id="@+id/crossingUpdate"
        android:name="com.heandroid.ui.startNow.CrossingServiceUpdatesFragment"
        android:label="@string/str_crossing_service_update"
        tools:layout="@layout/fragment_crosssing_service_update">

    </fragment>
</navigation>