<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_20dp"
            android:paddingTop="@dimen/margin_16dp"
            android:paddingEnd="@dimen/margin_20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/txtHeading"
                style="@style/MediumTextBlack"
                android:layout_width="0dp"
                android:text="@string/what_is_your_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/address"
                style="@style/input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:labelText="@string/txt_building_number_and_street"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHeading"
                app:maxLength="200" />

            <TextView
                android:id="@+id/txtThisShouldBeVehicle"
                style="@style/RegularTextBlack"
                android:layout_width="0dp"
                android:text="@string/str_address_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/address2"
                style="@style/input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:labelText="@string/str_address_line2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtThisShouldBeVehicle"
                app:maxLength="50" />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/townCity"
                style="@style/input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:labelText="@string/str_town_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address2"
                app:maxLength="50" />

            <com.conduent.nationalhighways.utils.widgets.NHTextInputCell
                android:id="@+id/postCode"
                style="@style/input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:labelText="@string/postcode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/townCity"
                app:maxLength="10" />

            <com.conduent.nationalhighways.utils.widgets.NHAutoCompleteTextview
                android:id="@+id/country"
                style="@style/input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/country_code"
                android:textSize="@dimen/font_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postCode" />


            <com.conduent.apollo.ui.CMButton
                android:id="@+id/btnFindAddress"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_40dp"
                android:layout_marginBottom="30dp"
                android:text="@string/str_continue"
                app:isEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>